Update benchmark results